# re-deemer

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  MANUAL.md  PLAN-VCV.md  PRESETS.md  README-RELEASING.md  README.md  ROADMAP.md  bundler.toml
.github/: FUNDING.yml
.github/workflows/: denormal-bench.yml  plugins-portable.yml  release.yml
crates/te2-capi/: Cargo.toml
crates/te2-capi/include/: te2.h
crates/te2-capi/src/: lib.rs
crates/te2-dsp/: Cargo.toml
crates/te2-dsp/examples/: cpu_cost.rs  denormal_bench.rs  res_comp_ab.rs
crates/te2-dsp/src/: denormals.rs  drive.rs  engine.rs  lib.rs  oversample.rs  sequencer.rs
crates/te2-dsp/src/filters/: biquad.rs  mod.rs  ota_ladder.rs
crates/te2-dsp/src/tape/: heads_eq.rs  magnetics.rs  mod.rs  noise.rs  reel.rs  stock.rs  transport.rs  wow_flutter.rs
crates/te2-plugin/: Cargo.toml
crates/te2-plugin/src/: lib.rs  params.rs  presets.rs  snapshot.rs  standalone.rs  update.rs
crates/te2-plugin/src/ui/: cassette.rs  mod.rs  theme.rs  vu.rs  widgets.rs
crates/te2-render/: Cargo.toml
crates/te2-render/src/: main.rs
docs/: index.html  version.json
scripts/: dev-install-setup.sh  dev-install.sh  downloads.sh  install.sh  notarize.sh  package-portable.sh  package.sh
site/: index.html
wrapper-au/: CMakeLists.txt
xtask/: Cargo.toml
