[package]
name = "te2-plugin"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
# Host-loadable plugin library + lib for the standalone/bundler
crate-type = ["cdylib", "lib"]

[features]
standalone = ["nice-plug/standalone"]
snapshot = ["dep:egui_kittest", "dep:image"]

[[bin]]
name = "te2-standalone"
path = "src/standalone.rs"
required-features = ["standalone"]

[[bin]]
name = "te2-snapshot"
path = "src/snapshot.rs"
required-features = ["snapshot"]

[dependencies]
te2-dsp = { path = "../te2-dsp" }
nice-plug = "0.1.8"
nice-plug-egui = "0.1.5"
# Preset files: factory table + user save/load.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Must match the egui version used by nice-plug-egui.
egui = "0.34.1"
# Tiny blocking HTTPS client for the once-a-day update check (background
# thread only). rustls + bundled roots — no system TLS / OpenSSL on any OS.
minreq = { version = "2", default-features = false, features = ["https-rustls"] }
# Dev tooling: headless UI snapshots.
egui_kittest = { version = "0.34", features = ["wgpu", "snapshot"], optional = true }
image = { version = "0.25", default-features = false, features = ["png"], optional = true }
